--- a/wp-content/themes/wingman/assets/css/style.css
+++ b/wp-content/themes/wingman/assets/css/style.css
@@ -1211,6 +1211,56 @@ select:not([multiple]) {
     color: #FFFFFF; }
 
 /* ==============================
+   2. Rev slider custom
+   ============================== */
+.uranus.tparrows {
+  width: 40px;
+  height: 140px; }
+  .uranus.tparrows:hover:before, .uranus.tparrows:hover:after {
+    color: #82c14f;
+    filter: alpha(opacity=100);
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+    -webkit-opacity: 1;
+    -khtml-opacity: 1;
+    -moz-opacity: 1;
+    -ms-opacity: 1;
+    -o-opacity: 1;
+    opacity: 1; }
+  .uranus.tparrows:before {
+    display: block;
+    font-family: "Josefin Slab", serif;
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 32px;
+    margin: 8px auto;
+    width: 18px;
+    word-wrap: break-word;
+    color: #FFFFFF; }
+  .uranus.tparrows.tp-leftarrow:before {
+    content: 'PREV'; }
+  .uranus.tparrows.tp-rightarrow:before {
+    content: 'NEXT'; }
+
+.ares .tp-bullet {
+  width: 10px;
+  height: 10px;
+  background: #ffffff;
+  -webkit-transition: all 0.2s ease-in-out 0s;
+  -khtml-transition: all 0.2s ease-in-out 0s;
+  -moz-transition: all 0.2s ease-in-out 0s;
+  -ms-transition: all 0.2s ease-in-out 0s;
+  -o-transition: all 0.2s ease-in-out 0s;
+  transition: all 0.2s ease-in-out 0s; }
+  .ares .tp-bullet.selected {
+    background: #ffffff;
+    -webkit-transform: scale(1.4);
+    -khtml-transform: scale(1.4);
+    -moz-transform: scale(1.4);
+    -ms-transform: scale(1.4);
+    -o-transform: scale(1.4);
+    transform: scale(1.4); }
+
+/* ==============================
    2. Widgets
    ============================== */
 .widget-container {
@@ -2178,25 +2228,25 @@ article.post-item.post-layout-classic {
 /**
 * 5.1. Single image
 **/
-.wpb_single_image .creative-left,
-.wpb_single_image .creative-right {
+.wpb_single_image .border-left,
+.wpb_single_image .border-right {
   margin-bottom: 30px;
   position: relative; }
-  .wpb_single_image .creative-left img,
-  .wpb_single_image .creative-right img {
+  .wpb_single_image .border-left img,
+  .wpb_single_image .border-right img {
     position: relative;
     z-index: 1; }
-  .wpb_single_image .creative-left.animated:before, .wpb_single_image .creative-left.animated:after,
-  .wpb_single_image .creative-right.animated:before,
-  .wpb_single_image .creative-right.animated:after {
+  .wpb_single_image .border-left.animated:before, .wpb_single_image .border-left.animated:after,
+  .wpb_single_image .border-right.animated:before,
+  .wpb_single_image .border-right.animated:after {
     height: 100%; }
-  .wpb_single_image .creative-left.animated .creative-inner:before, .wpb_single_image .creative-left.animated .creative-inner:after,
-  .wpb_single_image .creative-right.animated .creative-inner:before,
-  .wpb_single_image .creative-right.animated .creative-inner:after {
+  .wpb_single_image .border-left.animated .creative-inner:before, .wpb_single_image .border-left.animated .creative-inner:after,
+  .wpb_single_image .border-right.animated .creative-inner:before,
+  .wpb_single_image .border-right.animated .creative-inner:after {
     width: 100%; }
-.wpb_single_image .creative-left:before, .wpb_single_image .creative-left:after,
-.wpb_single_image .creative-right:before,
-.wpb_single_image .creative-right:after,
+.wpb_single_image .border-left:before, .wpb_single_image .border-left:after,
+.wpb_single_image .border-right:before,
+.wpb_single_image .border-right:after,
 .wpb_single_image .creative-inner:before,
 .wpb_single_image .creative-inner:after {
   content: "";
@@ -2209,51 +2259,110 @@ article.post-item.post-layout-classic {
   -ms-transition: all 1s ease-in-out;
   -o-transition: all 1s ease-in-out;
   transition: all 1s ease-in-out; }
-.wpb_single_image .creative-left:before, .wpb_single_image .creative-left:after,
-.wpb_single_image .creative-right:before,
-.wpb_single_image .creative-right:after {
+.wpb_single_image .border-left:before, .wpb_single_image .border-left:after,
+.wpb_single_image .border-right:before,
+.wpb_single_image .border-right:after {
   height: 0;
   width: 3px;
   bottom: -30px; }
-.wpb_single_image .creative-left .creative-inner:before, .wpb_single_image .creative-left .creative-inner:after,
-.wpb_single_image .creative-right .creative-inner:before,
-.wpb_single_image .creative-right .creative-inner:after {
+.wpb_single_image .border-left .creative-inner:before, .wpb_single_image .border-left .creative-inner:after,
+.wpb_single_image .border-right .creative-inner:before,
+.wpb_single_image .border-right .creative-inner:after {
   width: 0;
   height: 3px; }
-.wpb_single_image .creative-left .creative-inner:before,
-.wpb_single_image .creative-right .creative-inner:before {
+.wpb_single_image .border-left .creative-inner:before,
+.wpb_single_image .border-right .creative-inner:before {
   top: 30px; }
-.wpb_single_image .creative-left .creative-inner:after,
-.wpb_single_image .creative-right .creative-inner:after {
+.wpb_single_image .border-left .creative-inner:after,
+.wpb_single_image .border-right .creative-inner:after {
   bottom: -30px; }
-.wpb_single_image .creative-right:before {
-  left: -30px; }
-.wpb_single_image .creative-right:after {
-  right: 30px; }
-.wpb_single_image .creative-right .creative-inner:before, .wpb_single_image .creative-right .creative-inner:after {
-  left: -30px; }
-.wpb_single_image .creative-right:after,
-.wpb_single_image .creative-right .creative-inner:before {
+.wpb_single_image .border-left:before {
+  left: 30px; }
+.wpb_single_image .border-left:after {
+  right: -30px; }
+.wpb_single_image .border-left .creative-inner:before, .wpb_single_image .border-left .creative-inner:after {
+  right: -30px; }
+.wpb_single_image .border-left:before,
+.wpb_single_image .border-left .creative-inner:before {
   -webkit-transition-delay: 1s;
   -khtml-transition-delay: 1s;
   -moz-transition-delay: 1s;
   -ms-transition-delay: 1s;
   -o-transition-delay: 1s;
   transition-delay: 1s; }
-.wpb_single_image .creative-left:before {
-  left: 30px; }
-.wpb_single_image .creative-left:after {
-  right: -30px; }
-.wpb_single_image .creative-left .creative-inner:before, .wpb_single_image .creative-left .creative-inner:after {
-  right: -30px; }
-.wpb_single_image .creative-left:before,
-.wpb_single_image .creative-left .creative-inner:before {
-  -webkit-transition-delay: 0.35s;
-  -khtml-transition-delay: 0.35s;
-  -moz-transition-delay: 0.35s;
-  -ms-transition-delay: 0.35s;
-  -o-transition-delay: 0.35s;
-  transition-delay: 0.35s; }
+.wpb_single_image .border-right:before {
+  left: -30px; }
+.wpb_single_image .border-right:after {
+  right: 30px; }
+.wpb_single_image .border-right .creative-inner:before, .wpb_single_image .border-right .creative-inner:after {
+  left: -30px; }
+.wpb_single_image .border-right:after,
+.wpb_single_image .border-right .creative-inner:before {
+  -webkit-transition-delay: 1s;
+  -khtml-transition-delay: 1s;
+  -moz-transition-delay: 1s;
+  -ms-transition-delay: 1s;
+  -o-transition-delay: 1s;
+  transition-delay: 1s; }
+.wpb_single_image .border-box {
+  padding: 30px;
+  display: inline-block; }
+  .wpb_single_image .border-box .creative-inner {
+    position: relative;
+    display: inline-block; }
+  .wpb_single_image .border-box .creative-inner-content:before, .wpb_single_image .border-box .creative-inner-content:after {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    content: '';
+    display: block;
+    border: 3px solid #000000; }
+  .wpb_single_image .border-box .creative-inner-content:before {
+    top: -30px;
+    left: -30px; }
+  .wpb_single_image .border-box .creative-inner-content:after {
+    bottom: -30px;
+    right: -30px; }
+  .wpb_single_image .border-box img {
+    position: relative;
+    z-index: 1; }
+.wpb_single_image.creative-content {
+  padding: 80px; }
+.wpb_single_image .creative-left,
+.wpb_single_image .creative-right {
+  margin: 0; }
+  .wpb_single_image .creative-left .creative-inner-content:before,
+  .wpb_single_image .creative-right .creative-inner-content:before {
+    background: #000000;
+    content: "";
+    display: block;
+    height: 115px;
+    position: absolute;
+    width: 3px; }
+.wpb_single_image .creative-left .creative-inner-content:before {
+  left: -39px;
+  top: -95px;
+  -webkit-transform: rotate(315deg);
+  -khtml-transform: rotate(315deg);
+  -moz-transform: rotate(315deg);
+  -ms-transform: rotate(315deg);
+  -o-transform: rotate(315deg);
+  transform: rotate(315deg); }
+.wpb_single_image .creative-right .creative-inner-content:before {
+  right: -39px;
+  bottom: -95px;
+  -webkit-transform: rotate(315deg);
+  -khtml-transform: rotate(315deg);
+  -moz-transform: rotate(315deg);
+  -ms-transform: rotate(315deg);
+  -o-transform: rotate(315deg);
+  transform: rotate(315deg); }
+.wpb_single_image .creative-right:before, .wpb_single_image .creative-right:after {
+  top: -30px; }
+.wpb_single_image .creative-right .creative-inner:before {
+  top: -30px; }
+.wpb_single_image .creative-right .creative-inner:after {
+  bottom: 30px; }
 
 /**
 * 5.1. Single image
