--- a/wp-content/themes/wingman/framework/assets/css/framework-core.css
+++ b/wp-content/themes/wingman/framework/assets/css/framework-core.css
@@ -2,12 +2,12 @@
 * Helpers
 ===================================*/
 .clearfix:after {
-     visibility: hidden;
-     display: block;
-     font-size: 0;
-     content: " ";
-     clear: both;
-     height: 0;
+    visibility: hidden;
+    display: block;
+    font-size: 0;
+    content: " ";
+    clear: both;
+    height: 0;
 }
 .clearfix { display: inline-block; }
 * html .clearfix { height: 1%; }
@@ -18,18 +18,22 @@
 .widget-content .chosen-container + .chosen-container {
     display: none;
 }
+
+.toplevel_page_theme_options .media-sidebar .collection-settings{
+    display: none;
+}
 /*==================================
 * Spinner
 ===================================*/
 .kt-spinner{
     position: fixed;
-	top: 0;
-	left: 0;
-	height: 100%;
-	width: 100%;
-	z-index: 9999999;
-	display: none;
-	background: url(../images/spinner.gif) no-repeat center center;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 9999999;
+    display: none;
+    background: url(../images/spinner.gif) no-repeat center center;
 }
 
 /*==================================
@@ -205,7 +209,7 @@ input.cmn-toggle-round-flat:checked + label:after {
     max-width: 100%;
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box; 
+    -moz-box-sizing: border-box;
 }
 .kt_image_preview img{
     max-width: 100%;
@@ -227,17 +231,34 @@ input.cmn-toggle-round-flat:checked + label:after {
 /*==================================
 * Custom stype for metabox
 ===================================*/
+
 .rwmb-meta-box{
-    margin-top: 20px;
+    margin: 20px -12px 0 -12px;
 }
+.rwmb-meta-box .rwmb-field{
+    border-bottom: 1px solid #e8e8e8;
+    padding: 15px;
+}
+
+.rwmb-meta-box .rwmb-field:last-child{
+    border-bottom: 0;
+}
+
 .rwmb-meta-box .rwmb-label{
     width: 34%;
+    font-size: 13px;
+    font-weight: bold;
+    line-height: 1.5em;
 }
 .rwmb-meta-box .rwmb-label ~ .rwmb-input{
     width: 64%;
 }
 div#post-body .rwmb-select-advanced{
-    min-width: 330px;
+    min-width: 400px;
+}
+
+.rwmb-meta-box .description{
+    font-size: 12px;
 }
 
 div#post-body .rwmb-select{
@@ -246,7 +267,7 @@ div#post-body .rwmb-select{
     border: 1px solid #e4e4e4;
     cursor: pointer;
     height: 35px;
-    width: 330px;
+    width: 400px;
     box-shadow: none;
     max-width: 100%;
 }
@@ -254,7 +275,7 @@ div#post-body .rwmb-select{
 div#post-body .rwmb-text{
     border: 1px solid #e4e4e4;
     height: 35px;
-    width: 330px;
+    width: 400px;
     box-shadow: none;
     max-width: 100%;
 }
@@ -267,9 +288,9 @@ div#post-body .rwmb-text{
 #side-sortables .rwmb-input .rwmb-text{
     max-width: 100%;
 }
-.slider-no-image-preview .upload_button_div, 
+.slider-no-image-preview .upload_button_div,
 .slider-no-image-preview .redux_slides_add_remove{
-     display: none;
+    display: none;
 }
 .rwmb-color-wrapper .wp-picker-holder{
     z-index: 1;
@@ -282,12 +303,41 @@ div#post-body .rwmb-text{
     margin-left: 10px;
     color: #ef521d;
 }
+.rwmb-Ktgallery-wrapper .button{
+    margin-right: 5px;
+}
+.rwmb-Ktgallery-wrapper .kt-gallery-images{
+    margin: 0;
+}
+.rwmb-Ktgallery-wrapper .kt-gallery-images li{
+    border: 5px solid #1e8cbe;
+    display: inline-block;
+    float: left;
+    margin: 0 20px 19px 0;
+    max-width: 150px;
+}
+.rwmb-Ktgallery-wrapper .kt-gallery-images li img{
+    display: block;
+}
+
+.post-type-kt_portfolio .gallery-settings{
+    display: none;
+}
+
+.rwmb-meta-box .wrapper_kt_image_upload .wp-picker-container{
+    margin-bottom: 10px;
+}
+
+.rwmb-meta-box .wrapper_kt_image_upload .rwmb-field{
+    border: medium none;
+    padding: 0;
+}
 
 /*==================================
 * Troubleshooting
 ===================================*/
 .form-table td fieldset .troubleshooting{
-    
+
 }
 .form-table td fieldset .troubleshooting ul{
     padding: 0;
@@ -325,7 +375,7 @@ div#post-body .rwmb-text{
     color: red;
     text-align: left;
     display: block;
-    
+
 }
 .post-type-designer #titlediv div.inside{
     display: none;
@@ -371,75 +421,120 @@ div#post-body .rwmb-text{
     padding: 10px;
     text-transform: uppercase;
 }
-#page_meta_boxes.postbox{
-    background: none;
-    border: none;
-    box-shadow: 0 0 0;
-}
-#page_meta_boxes .handlediv,
-#page_meta_boxes h3.hndle{
+
+#page_meta_boxes .hndle{
     display: none;
 }
-#page_meta_boxes > .inside{
-    margin: 0;
-    padding: 0;
+
+#page_meta_boxes .handlediv:before{
+    right: 23px;
+    top: 7px;
+    z-index: 1;
 }
+
+#page_meta_boxes.closed .hndle{
+    display: block;
+}
+#page_meta_boxes.closed .handlediv:before{
+    right: 12px;
+    top: 0;
+}
+
+
 #page_meta_boxes .rwmb-meta-box{
     margin-top: 0;
 }
 
+#page_meta_boxes > .inside{
+    margin: 0;
+}
+
+
 /*==================================
-* Mouse
+* KT icons
 ===================================*/
-.mouse{
-    border:2px solid #fff;
-    border-radius:26px;
+.wpb_el_type_kt_icons{
+    background: #fff;
+    padding: 15px;
+}
+.wpb_el_type_kt_icons ul{
+    list-style: none;
+    margin: 0;
+    background: #f6f6f6;
+    padding: 10px;
+    max-height: 167px;
+    min-height: 44px;
+    overflow: auto;
+}
+.wpb_el_type_kt_icons ul li{
+    border: 1px solid #dddddd;
     cursor: pointer;
-    width:20px;
-    height:35px;
-    margin: 0 auto;
+    display: inline-block;
+    float: left;
+    font-size: 18px;
+    height: 40px;
+    line-height: 40px;
+    margin: 1px;
+    text-align: center;
+    width: 40px;
+    -webkit-transition: 0.1s ease-in-out;
+    -moz-transition: 0.1s ease-in-out;
+    -o-transition: 0.1s ease-in-out;
+    transition: 0.1s ease-in-out;
+    background: #f6f6f6;
+}
+.wpb_el_type_kt_icons ul li.current{
+    background: #305288;
+    border-color: #305288;
+    color: #ffffff;
+}
+.wpb_el_type_kt_icons ul li:hover{
+    position: relative;
+    z-index: 50;
+    -webkit-transform: scale(1.3);
+    -moz-transform: scale(1.3);
+    -o-transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    transform: scale(1.3);
+    box-shadow: 0 0 5px #999;
+}
+
+.wpb_el_type_kt_icons .param-icon-header{
+    position: relative;
+    padding-left: 100px;
+    min-height: 100px;
+}
+
+.wpb_el_type_kt_icons .param-icon-preview{
+    background: #f6f6f6;
+    border: 1px solid #dddddd;
+    float: right;
+    font-size: 50px;
+    height: 85px;
+    line-height: 83px;
+    margin-right: 10px;
+    position: absolute;
+    left: 0;
+    text-align: center;
+    top: 0;
+    width: 85px;
+}
+.wpb_el_type_kt_icons .icon-preview-remove:after{
+    content: "\f00d";
+    background: rgba(255, 0, 0, 0.6);
+    color: #ffffff;
+    cursor: pointer;
+    font-family: FontAwesome;
+    font-size: 12px;
+    height: 20px;
+    line-height: 18px;
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 20px;
+    display: none;
+}
+.wpb_el_type_kt_icons .active .icon-preview-remove:after{
     display: block;
 }
 
-.mouse:after{
-    background-color:#fff;
-    border-radius:100%;
-    content:"";
-    position:absolute;
-    top:5px;
-    left:50%;
-    margin-left:-2px;
-    width:4px;
-    height:4px;
-    opacity:1;
-    -webkit-transform:translateY(0px) scaleY(1) scaleX(1) translateZ(0px);
-    -moz-transform:translateY(0px) scaleY(1) scaleX(1) translateZ(0px);
-    -ms-transform:translateY(0px) scaleY(1) scaleX(1) translateZ(0px);
-    -o-transform:translateY(0px) scaleY(1) scaleX(1) translateZ(0px);
-    transform:translateY(0px) scaleY(1) scaleX(1) translateZ(0px);
-
-    -webkit-animation:mousescroll 1.5s -1s cubic-bezier(0.68, -0.55, 0.265, 1.55) infinite;
-    -moz-animation:mousescroll 1.5s -1s cubic-bezier(0.68, -0.55, 0.265, 1.55) infinite;
-    animation:mousescroll 1.5s -1s cubic-bezier(0.68, -0.55, 0.265, 1.55) infinite;
-}
-
-.mouse-back{
-    border-color: #282828;
-}
-.mouse-back:after{
-    background-color: #282828;
-}
-
-.Fashion-BigDisplay span{
-    color: #d0a852;
-}
-
-
-#valorous_option-header.redux-container-image_select ul.redux-image-select li,
-#valorous_option-header.redux-container-image_select ul.redux-image-select li label{
-    display: block;
-}
-
-#info-demo_importer_critical{
-    margin-bottom: 30px;
-}
