--- a/wp-content/themes/wingman/assets/css/_variables.scss
+++ b/wp-content/themes/wingman/assets/css/_variables.scss
@@ -36,6 +36,7 @@ $border-second-color: #e9e9e9;
 $border-third-color: #e8e8e8;
 $border-dark-color: #363636;
 $border-third-color: #dfdfdf;
+$border-header-tabs: #ed727c;
 
 $nav-bg: #1e1e1e;
 
